syntax = "proto3";

package systems.ajax.malov.commonmodel.stock.big_decimal.proto;

option java_multiple_files = true;

message BDecimal {
  int32 scale = 1;
  BInteger int_val = 2;
}

message BInteger {
  bytes value = 1;
}